--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
+    <title>ToDoList</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="todo-container">
-        <h1>To-Do List</h1>
-        <form id="todo-form">
-            <input type="text" id="todo-input" placeholder="Añadir una tarea" required>
-            <button type="submit">Añadir</button>
-        </form>
-        <ul id="todo-list"></ul>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title text-center">ToDoList</h1>
+                        <form id="todo-form" class="input-group mb-3">
+                            <input type="text" id="todo-input" class="form-control" placeholder="Añadir una tarea" required>
+                            <button type="submit" class="btn btn-success">Añadir</button>
+                        </form>
+                        <ul id="todo-list" class="list-group"></ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
